Improve todo module
Rename models.go to entity.go

Integrate model package with todo package

Integrate todo validator to todo controller

Remove unnecessary test of todo controller

Refactor todo module

Synchronize todo swagger
